# trickster

./: .gitattributes  .gitignore  ARCHITECTURE.md  README.md  TRAINING.md  ULTI_AI.md  ULTI_AI_OBSERVATIONS.md  ULTI_PLAN.md  ULTI_TECHNICAL_SPEC.md  eval_mcts_strength.py  pyproject.toml  requirements.txt  setup_aws.sh  setup_cython.py  train_grid.sh
apps/: __init__.py
apps/api/: __init__.py  main.py  ulti.py
apps/web/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
docs/: bidding_training_and_eval.md  solver_training_notes.md  tier_configs.csv
models/: ulti_auto.pt  ulti_betli.pt  ulti_mixed.pt  ulti_mixed_fixed.pt  ulti_mixed_fixed2.pt
models/AlphaZero/: net.pkl
models/Batman/: latest.pkl  train_info.json
models/Direct-20k/: latest.pkl  spec.json  train_info.json
models/MCTS-10k/: latest.pkl  spec.json  train_info.json
models/Mewtwo/: latest.pkl  spec.json  train_info.json
models/Spiderman/: latest.pkl  spec.json
models/T3-Knight/: spec.json
models/T4-Bishop/: train_info.json
scripts/: dojo.py  eval.py  eval_bidding.py  eval_head2head.py  eval_hybrid.py  eval_ulti.py  quantile_tournament.py  test_cython_solver.py  tournament.py  train.py  train_alpha_zero.py  train_and_tournament_knights.sh  train_baseline.py  train_e2e.py  train_hybrid.py  train_ladder.py  train_pipeline.sh  train_solver_nets.py  train_ulti.py
tests/: conftest.py  test_ai_takaras_action.py  test_game_over_66.py  test_marriage_takaras.py  test_model_store.py  test_rules.py  test_trump.py  test_variant_a_draw.py
(+189 files in other folders)
