[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trickster"
version = "0.2.0"
description = "Hungarian card game framework with AlphaZero MCTS training and React UI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastapi", "uvicorn", "numpy"]

[project.optional-dependencies]
dev = ["pytest==8.3.4"]
fast = ["cython"]
train = ["torch", "cython", "onnxruntime"]

[project.scripts]
trickster-gui = "trickster.gui:main"
trickster-train = "trickster.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

